logs/watchdog_20251013_1108.log
[13/10/2025 11:08:16,36] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025 11:08:16,58] END WATCHDOG 
